--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "firebase-tools": "^8.11.2",
     "graphql": "^15.3.0",
     "numeral": "^2.0.6",
     "react": "^16.13.1",
